// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expandableCard > renders correctly with complex header 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-0:hover>.emotion-3 {
  border-color: #8c40ef;
}

.emotion-2 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  width: 100%;
  -webkit-transition: border-color 0.2s ease-in-out;
  transition: border-color 0.2s ease-in-out;
}

.emotion-2[open] {
  border-color: #8c40ef;
}

.emotion-2[open]>.emotion-9 {
  border-color: #8c40ef;
}

.emotion-2[open] .emotion-7 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-2[data-clicking="true"] {
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  border-color: #8c40ef;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  padding: 1.5rem;
  list-style-type: none;
  cursor: pointer;
}

.emotion-4[data-disabled="true"] {
  background: #f9f9fa;
  border-radius: 0.25rem;
  cursor: not-allowed;
}

.emotion-8 {
  border-top: 1px solid #d9dadd;
  padding: 1.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      width="100%"
    >
      <details
        class="emotion-2 emotion-3"
        data-clicking="false"
      >
        <summary
          class="emotion-4 emotion-5"
          data-disabled="false"
        >
          <svg
            class="emotion-6 emotion-7 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_2__vbm0wqm"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <div>
            <h2
              class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Title
            </h2>
            <p
              class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              Description
            </p>
          </div>
        </summary>
        <div
          class="emotion-8 emotion-9"
        >
          Content
        </div>
      </details>
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandableCard > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-0:hover>.emotion-3 {
  border-color: #8c40ef;
}

.emotion-2 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  width: 100%;
  -webkit-transition: border-color 0.2s ease-in-out;
  transition: border-color 0.2s ease-in-out;
}

.emotion-2[open] {
  border-color: #8c40ef;
}

.emotion-2[open]>.emotion-9 {
  border-color: #8c40ef;
}

.emotion-2[open] .emotion-7 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-2[data-clicking="true"] {
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  border-color: #8c40ef;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  padding: 1.5rem;
  list-style-type: none;
  cursor: pointer;
}

.emotion-4[data-disabled="true"] {
  background: #f9f9fa;
  border-radius: 0.25rem;
  cursor: not-allowed;
}

.emotion-8 {
  border-top: 1px solid #d9dadd;
  padding: 1.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      width="100%"
    >
      <details
        class="emotion-2 emotion-3"
        data-clicking="false"
      >
        <summary
          class="emotion-4 emotion-5"
          data-disabled="false"
        >
          <svg
            class="emotion-6 emotion-7 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_2__vbm0wqm"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Title
          </h2>
        </summary>
        <div
          class="emotion-8 emotion-9"
        >
          Content
        </div>
      </details>
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandableCard > works properly draggable 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-0:hover>.emotion-5 {
  border-color: #8c40ef;
}

.emotion-2 {
  height: 100%;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  cursor: -webkit-grab;
  cursor: grab;
  padding-top: calc(1.5rem + 2px);
}

.emotion-2[data-visible="true"] {
  opacity: 1;
}

.emotion-2:focus-within {
  opacity: 1;
}

.emotion-2:active {
  cursor: -webkit-grabbing;
  cursor: grabbing;
  opacity: 1;
}

.emotion-4 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  width: 100%;
  -webkit-transition: border-color 0.2s ease-in-out;
  transition: border-color 0.2s ease-in-out;
}

.emotion-4[open] {
  border-color: #8c40ef;
}

.emotion-4[open]>.emotion-11 {
  border-color: #8c40ef;
}

.emotion-4[open] .emotion-9 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-4[data-clicking="true"] {
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  border-color: #8c40ef;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  padding: 1.5rem;
  list-style-type: none;
  cursor: pointer;
}

.emotion-6[data-disabled="true"] {
  background: #f9f9fa;
  border-radius: 0.25rem;
  cursor: not-allowed;
}

.emotion-10 {
  border-top: 1px solid #d9dadd;
  padding: 1.5rem;
}

.emotion-12 {
  height: 1.5rem;
  border-bottom: 2px solid;
  border-color: transparent;
  padding: 0.25rem 0;
  width: 100%;
  bottom: -5px;
  position: absolute;
}

.emotion-12[data-first="true"] {
  top: -1.5rem;
}

.emotion-12::after {
  content: '';
  left: 0;
  bottom: -4px;
  height: 0px;
  width: 0px;
  border: 3px solid;
  border-color: inherit;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -0.5rem;
  margin-left: -0.125rem;
  position: absolute;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      data-draggable="true"
      data-value="card-1"
      draggable="true"
      style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      width="100%"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
        data-testid="draggable-icon-card-1"
        data-visible="true"
        style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      >
        <div
          aria-controls="«r6»"
          aria-describedby="«r6»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_strong__vbm0wqh styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_9__vbm0wqt"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.5 14q-.618 0-1.06-.44A1.45 1.45 0 0 1 4 12.5q0-.619.44-1.06Q4.883 11 5.5 11t1.06.44q.44.442.44 1.06t-.44 1.06Q6.12 14 5.5 14m4.5 0q-.619 0-1.06-.44a1.45 1.45 0 0 1-.44-1.06q0-.619.44-1.06Q9.382 11 10 11t1.06.44q.44.442.44 1.06t-.44 1.06Q10.617 14 10 14M5.5 9.5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 8q0-.619.44-1.06.442-.44 1.06-.44t1.06.44Q7 7.383 7 8t-.44 1.06q-.44.44-1.06.44m4.5 0q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 8q0-.619.44-1.06.441-.44 1.06-.44t1.06.44q.44.442.44 1.06t-.44 1.06q-.442.44-1.06.44M5.5 5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 3.5q0-.62.44-1.06Q4.883 2 5.5 2t1.06.44Q7 2.883 7 3.5q0 .62-.44 1.06T5.5 5M10 5q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 3.5q0-.62.44-1.06Q9.382 2 10 2t1.06.44q.44.442.44 1.06 0 .62-.44 1.06Q10.617 5 10 5"
            />
          </svg>
        </div>
      </div>
      <details
        class="emotion-4 emotion-5"
        data-clicking="true"
      >
        <summary
          class="emotion-6 emotion-7"
          data-disabled="false"
        >
          <svg
            class="emotion-8 emotion-9 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_2__vbm0wqm"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Title
          </h2>
        </summary>
        <div
          class="emotion-10 emotion-11"
        >
          Content
        </div>
      </details>
      <div
        class="emotion-12 emotion-13"
        data-first="true"
      />
      <div
        class="emotion-12 emotion-13"
        data-testid="card-1-dropable-area"
        style="border-color: transparent;"
      />
    </div>
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      data-draggable="true"
      data-value="card-2"
      draggable="true"
      style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      width="100%"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
        data-testid="draggable-icon-card-2"
        data-visible="false"
        style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      >
        <div
          aria-controls="«r8»"
          aria-describedby="«r8»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_weak__vbm0wqj styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_23__vbm0wq17"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.5 14q-.618 0-1.06-.44A1.45 1.45 0 0 1 4 12.5q0-.619.44-1.06Q4.883 11 5.5 11t1.06.44q.44.442.44 1.06t-.44 1.06Q6.12 14 5.5 14m4.5 0q-.619 0-1.06-.44a1.45 1.45 0 0 1-.44-1.06q0-.619.44-1.06Q9.382 11 10 11t1.06.44q.44.442.44 1.06t-.44 1.06Q10.617 14 10 14M5.5 9.5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 8q0-.619.44-1.06.442-.44 1.06-.44t1.06.44Q7 7.383 7 8t-.44 1.06q-.44.44-1.06.44m4.5 0q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 8q0-.619.44-1.06.441-.44 1.06-.44t1.06.44q.44.442.44 1.06t-.44 1.06q-.442.44-1.06.44M5.5 5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 3.5q0-.62.44-1.06Q4.883 2 5.5 2t1.06.44Q7 2.883 7 3.5q0 .62-.44 1.06T5.5 5M10 5q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 3.5q0-.62.44-1.06Q9.382 2 10 2t1.06.44q.44.442.44 1.06 0 .62-.44 1.06Q10.617 5 10 5"
            />
          </svg>
        </div>
      </div>
      <details
        class="emotion-4 emotion-5"
        data-clicking="false"
      >
        <summary
          class="emotion-6 emotion-7"
          data-disabled="false"
        >
          <svg
            class="emotion-8 emotion-9 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_2__vbm0wqm"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Title
          </h2>
        </summary>
        <div
          class="emotion-10 emotion-11"
        >
          Content
        </div>
      </details>
      <div
        class="emotion-12 emotion-13"
        data-testid="card-2-dropable-area"
      />
    </div>
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
      data-draggable="true"
      data-value="card-3"
      draggable="true"
      style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      width="100%"
    >
      <div
        class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
        data-testid="draggable-icon-card-3"
        data-visible="false"
        style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      >
        <div
          aria-controls="«ra»"
          aria-describedby="«ra»"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <svg
            class="styles__vbm0wq0 styles_prominence_weak__vbm0wqj styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_23__vbm0wq17"
            viewBox="0 0 16 16"
          >
            <path
              d="M5.5 14q-.618 0-1.06-.44A1.45 1.45 0 0 1 4 12.5q0-.619.44-1.06Q4.883 11 5.5 11t1.06.44q.44.442.44 1.06t-.44 1.06Q6.12 14 5.5 14m4.5 0q-.619 0-1.06-.44a1.45 1.45 0 0 1-.44-1.06q0-.619.44-1.06Q9.382 11 10 11t1.06.44q.44.442.44 1.06t-.44 1.06Q10.617 14 10 14M5.5 9.5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 8q0-.619.44-1.06.442-.44 1.06-.44t1.06.44Q7 7.383 7 8t-.44 1.06q-.44.44-1.06.44m4.5 0q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 8q0-.619.44-1.06.441-.44 1.06-.44t1.06.44q.44.442.44 1.06t-.44 1.06q-.442.44-1.06.44M5.5 5q-.618 0-1.06-.44A1.44 1.44 0 0 1 4 3.5q0-.62.44-1.06Q4.883 2 5.5 2t1.06.44Q7 2.883 7 3.5q0 .62-.44 1.06T5.5 5M10 5q-.619 0-1.06-.44A1.44 1.44 0 0 1 8.5 3.5q0-.62.44-1.06Q9.382 2 10 2t1.06.44q.44.442.44 1.06 0 .62-.44 1.06Q10.617 5 10 5"
            />
          </svg>
        </div>
      </div>
      <details
        class="emotion-4 emotion-5"
        data-clicking="false"
      >
        <summary
          class="emotion-6 emotion-7"
          data-disabled="false"
        >
          <svg
            class="emotion-8 emotion-9 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_2__vbm0wqm"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
              fill-rule="evenodd"
            />
          </svg>
          <h2
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            Title
          </h2>
        </summary>
        <div
          class="emotion-10 emotion-11"
        >
          Content
        </div>
      </details>
      <div
        class="emotion-12 emotion-13"
        data-testid="card-3-dropable-area"
      />
    </div>
  </div>
</DocumentFragment>
`;
